tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat9
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: tomcat9
